# Smart-Virtual-Wardrobe

./: LICENSE  README.md
backend/: .gitignore  README.md  cloudinary_config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/avatars_3D/: sample.glb
backend/model_training_books/: Clothing_items_classification.ipynb  virtual-tryon-model-book.ipynb
backend/models/: database_ops.py  schemas.py
backend/routers/: apparel.py  auth.py  avatar.py  favorites.py  image.py  model3d.py  outfit_advisor.py  style_feed.py  tryon.py  wardrobe.py
backend/utils/: apparel_only.csv
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/assets/: ClothHangerIcon.jsx
frontend/src/components/: Footer.jsx  GLBViewer.jsx  ImageUpload.jsx  Logout.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AvatarGeneratorPage.jsx  FavoritesPage.jsx  HelpPage.jsx  HistoryPage.jsx  HomePage.jsx  LoginPage.jsx  OutfitAdvisorPage.jsx  ProfilePage.jsx  RegisterPage.jsx  StyleFeed.jsx  TryOnPage.jsx  WardrobePage.jsx
frontend/src/services/: api.js
